--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
 	  		<% if !current_user %>
 				<%= link_to "Sign Up", new_user_path %> |
 				<%= link_to "Sign In", new_user_session_path %> |
+				<%= link_to "Search", search_path%>
 			<% else %>
 				<%= link_to "My Account", user_path(current_user) %> |
 				<% if auth_provider.nil? %><%= link_to "Change Password", change_password_users_path %> |<% end%>				
 				<% if !auth_provider.nil? %><%= link_to "Friends", friends_path %> |<% end%>
+				<%= link_to "Search", search_path%> |
 				<%= link_to "Sign out", user_session_path(current_user), :method => :delete, :confirm => "Are you sure you want to signout?" %>
-			<% end %>
+			<% end %>			
   		</div>
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
