Added solr search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
   <head>
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
     <%= stylesheet_link_tag "/stylesheets/application.css" %>
+	<%= stylesheet_link_tag "/javascripts/fancybox/jquery.fancybox-1.3.4.css"%>
     <%= javascript_include_tag :defaults %>
+	<%= javascript_include_tag "/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js", "/javascripts/fancybox/jquery.easing-1.3.pack.js", "/javascripts/fancybox/jquery.mousewheel-3.0.4.pack.js"%>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
