--- a/app/views/claim_mains/email_to_friend.html.erb
+++ b/app/views/claim_mains/email_to_friend.html.erb
@@ -1,1 +1,20 @@
 <% title 'Email to friend'%>
+<% javascript('/javascripts/jquery.validate.js')%>
+
+<div>
+	<%= form_tag email_to_friend_claim_main_path, :id=> 'email_to_friend', :method => :get do %>
+		<p>
+			<%= label_tag :email %><br />
+			<%= text_field_tag :email, '',{:class => "required email"} %>
+  		</p>
+		<p>
+			<%= submit_tag 'Send'%>
+		</p>
+	<% end%>
+</div>
+
+<script type="text/javascript">
+	$(function(){
+		$("#email_to_friend").validate();
+	});
+</script>
