--- a/app/views/claim_mains/show.html.erb
+++ b/app/views/claim_mains/show.html.erb
@@ -1,6 +1,9 @@
 <% title 'Details'%>
 
 <div>
+	<% if !@claim_amount.nil?%>
+		<div style="padding:10px;border: 1px solid #000000;margin-bottom:10px;background-color: #FCC;">This amount is already claimed.</div>
+	<% end%>	
 	<table border="1px;" cellpadding="2px;">
 		<tr>
 			<td>Last Name </td><td><%= @claim_main.lastname%> </td>
@@ -95,8 +98,18 @@
 
 <script type="text/javascript">
 	var is_login = '<%= is_user_login%>';
+	var is_claimed = '<%= !@claim_amount.nil?%>';
 	$(function(){
 		$('a#claim_it').click(function(e){
+			if(is_claimed == 'true') {
+				$('a#claim_it').attr('title', 'This amount is already claimed.');
+				$.fancybox({
+					content: 'This amount is already claimed',
+					showCloseButton: false
+				});
+				e.preventDefault();
+				return false;
+			}
 			if(is_login == 'false') {
 				$.fancybox({
 					content: "Please <a href='/user_sessions/new'>Login</a> or <a href='/users/new'>Register</a> to Claim",
@@ -106,6 +119,7 @@
 					href: "<%= claim_link%>"
 				});
 			}
-		});
+		});		
+		
 	})
 </script>
