--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,13 @@
 				<% if !auth_provider.nil? %><%= link_to "Friends", friends_path %> |<% end%>
 				<%= link_to "Search", search_path%> |
 				<%= link_to "Sign out", user_session_path(current_user), :method => :delete, :confirm => "Are you sure you want to signout?" %>
-			<% end %>			
+			<% end %>		
   		</div>
+		<% if current_user%>
+			<div style="float:right;border:1px solid #000000;padding:10px;background-color:#CDD;">					
+				<%=raw "You claimed <b>$#{totalclaimed.to_f}</b> -- till now"%>
+			</div>
+		<% end%>
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
