add claim mains

--- a/app/views/claim_mains/show.html.erb
+++ b/app/views/claim_mains/show.html.erb
@@ -1,100 +1,112 @@
 <% title 'Details'%>
 
-<div>
+<style type="text/css">
+	.tb-bold {
+		font-weight: bold;
+	}
+</style>
+
+<div id="addthis" class="addthis-widget">	
+	<%= render(:partial => "layouts/addthis_widget")%>
+</div>
+<div style="float:left;">
 	<% if !@claim_amount.nil?%>
 		<div style="padding:10px;border: 1px solid #000000;margin-bottom:10px;background-color: #FCC;">This amount is already claimed.</div>
 	<% end%>	
-	<table border="1px;" cellpadding="2px;">
+	<table cellpadding="3px;" cellspacing="5px;">
 		<tr>
-			<td>Last Name </td><td><%= @claim_main.lastname%> </td>
+			<td class="tb-bold">Last Name </td><td>: <%= @claim_main.lastname%> </td>
 		</tr>
 		<tr>
-			<td>First Name </td><td><%= @claim_main.firstname%> </td>
+			<td class="tb-bold">First Name </td><td>: <%= @claim_main.firstname%> </td>
 		</tr>
 		<tr>
-			<td>Address 1 </td><td><%= @claim_main.address1%> </td>
+			<td class="tb-bold">Address 1 </td><td>: <%= @claim_main.address1%> </td>
 		</tr>
 		<tr>
-			<td>Address 2 </td><td><%= @claim_main.address2%> </td>
+			<td class="tb-bold">Address 2 </td><td>: <%= @claim_main.address2%> </td>
 		</tr>
 		<tr>
-			<td>Address 3 </td><td><%= @claim_main.address3%> </td>
+			<td class="tb-bold">Address 3 </td><td>: <%= @claim_main.address3%> </td>
 		</tr>
 		<tr>
-			<td>City </td><td><%= @claim_main.city%> </td>
+			<td class="tb-bold">City </td><td>: <%= @claim_main.city%> </td>
 		</tr>
 		<tr>
-			<td>State </td><td><%= @claim_main.state%> </td>
+			<td class="tb-bold">State </td><td>: <%= @claim_main.state%> </td>
 		</tr>
 		<tr>
-			<td>Zip Code</td><td><%= @claim_main.zip%> </td>
+			<td class="tb-bold">Zip Code</td><td>: <%= @claim_main.zip%> </td>
 		</tr>
 		<tr>
-			<td>Holder Tax ID </td><td><%= @claim_main.tax_id%> </td>
+			<td class="tb-bold">Holder Tax ID </td><td>: <%= @claim_main.tax_id%> </td>
 		</tr>
 		<tr>
-			<td>Holder Division </td><td><%= @claim_main.division%> </td>
+			<td class="tb-bold">Holder Division </td><td>: <%= @claim_main.division%> </td>
 		</tr>
 		<tr>
-			<td>Holder Report Year </td><td><%= @claim_main.h_report_year%> </td>
+			<td class="tb-bold">Holder Report Year </td><td>: <%= @claim_main.h_report_year%> </td>
 		</tr>
 		<tr>
-			<td>Property Type </td><td><%= @claim_main.property_type%> </td>
+			<td class="tb-bold">Property Type </td><td>: <%= @claim_main.property_type%> </td>
 		</tr>
 		<tr>
-			<td>Property Sequence</td><td><%= @claim_main.property_seq%> </td>
+			<td class="tb-bold">Property Sequence</td><td>: <%= @claim_main.property_seq%> </td>
 		</tr>
 		<tr>
-			<td>Owners Flag </td><td><%= @claim_main.owners_flag%> </td>
+			<td class="tb-bold">Owners Flag </td><td>: <%= @claim_main.owners_flag%> </td>
 		</tr>
 		<tr>
-			<td>Beginning Transaction Date </td><td><%= @claim_main.last_trans_date%> </td>
+			<td class="tb-bold">Beginning Transaction Date </td><td>: <%= @claim_main.last_trans_date%> </td>
 		</tr>
 		<tr>
-			<td>Ending Transaction Date </td><td><%= @claim_main.ending_trans_date%> </td>
+			<td class="tb-bold">Ending Transaction Date </td><td>: <%= @claim_main.ending_trans_date%> </td>
 		</tr>
 		<tr>
-			<td>Dollar Amount Remitted </td><td><%= @claim_main.dollars_remitted%> </td>
+			<td class="tb-bold">Dollar Amount Remitted </td><td>: $<%= @claim_main.dollars_remitted.to_f%> </td>
 		</tr>
 		<tr>
-			<td>Number of Shares Remitted </td><td><%= @claim_main.share_remited%> </td>
+			<td class="tb-bold">Number of Shares Remitted </td><td>: <%= @claim_main.share_remited%> </td>
 		</tr>
 		<tr>
-			<td>Report Date </td><td><%= @claim_main.report_date%> </td>
+			<td class="tb-bold">Report Date </td><td>: <%= @claim_main.report_date%> </td>
 		</tr>
 		<tr>
-			<td>Holder Name </td><td><%= @claim_main.h_firstname%> </td>
+			<td class="tb-bold">Holder Name </td><td>: <%= @claim_main.h_firstname%> </td>
 		</tr>
 		<tr>
-			<td>Holder Address Line 1 </td><td><%= @claim_main.h_address1%> </td>
+			<td class="tb-bold">Holder Address Line 1 </td><td>: <%= @claim_main.h_address1%> </td>
 		</tr>
 		<tr>
-			<td>Holder Address Line 2 </td><td><%= @claim_main.h_address2%> </td>
+			<td class="tb-bold">Holder Address Line 2 </td><td>: <%= @claim_main.h_address2%> </td>
 		</tr>
 		<tr>
-			<td>Holder Address Line 3 </td><td><%= @claim_main.h_address3%> </td>
+			<td class="tb-bold">Holder Address Line 3 </td><td>: <%= @claim_main.h_address3%> </td>
 		</tr>
 		<tr>
-			<td>Holder City </td><td><%= @claim_main.h_city%> </td>
+			<td class="tb-bold">Holder City </td><td>: <%= @claim_main.h_city%> </td>
 		</tr>
 		<tr>
-			<td>Holder State </td><td><%= @claim_main.h_state%> </td>
+			<td class="tb-bold">Holder State </td><td>: <%= @claim_main.h_state%> </td>
 		</tr>
 		<tr>
-			<td>Holder Zip Code </td><td><%= @claim_main.h_zip%> </td>
+			<td class="tb-bold">Holder Zip Code </td><td>: <%= @claim_main.h_zip%> </td>
 		</tr>
 		<tr>
-			<td>Added Date </td><td><%= @claim_main.add_date%> </td>
+			<td class="tb-bold">Added Date </td><td>: <%= @claim_main.add_date%> </td>
 		</tr>
 		<tr>
-			<td>Updated Date </td><td><%= @claim_main.update_date%> </td>
+			<td class="tb-bold">Updated Date </td><td>: <%= @claim_main.update_date%> </td>
 		</tr>
 	</table>	
 </div>
-<div style="text-align:right;border-top: 1px solid;padding: 3px;margin-top: 5px;">
-	<%= link_to "Claim It", '#claim_it', {:id => 'claim_it'}%>&nbsp;|&nbsp;<%= link_to "Email to friend", email_to_friend_claim_main_path(:id=>@claim_main.id)%>
-	<% claim_link = claim_it_claim_main_path(:id=>@claim_main.id)%>
+<div style="float:right;text-align:center;font-size:2em;font-weight:bold;">
+	<div style="position:relative;top:100px;left:-150px;">
+		<%= link_to "Claim It", '#container', {:id => 'claim_it', :style=>"text-decoration:none;"}%><br><br><%= link_to "Email to friend", email_to_friend_claim_main_path(:id=>@claim_main.id),{:style=>"text-decoration:none;"}%>
+		<% claim_link = claim_it_claim_main_path(:id=>@claim_main.id)%>
+	</div>	
 </div>
+<div class="clear"></div>
 
 <script type="text/javascript">
 	var is_login = '<%= is_user_login%>';
