--- a/app/views/friends/_facebook_friends.html.erb
+++ b/app/views/friends/_facebook_friends.html.erb
@@ -1,6 +1,6 @@
 <div style="padding-top:20px;">
 	<div>
-		<%= link_to 'Get Facebook friends', get_facebook_friends_friends_path%>
+		<%= link_to 'Get Facebook friends', get_facebook_friends_friends_path(:target_page => target_page) %>
 	</div><br><br>
 	<div>		
 		<fieldset>			
