--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,8 @@
     <%= yield(:head) %>
   </head>
   <body>  		
-    <div id="container">
-    	<div id="header">
-	  		<% if !current_user %>
-				<%= link_to "Sign Up", new_user_path %> |
-				<%= link_to "Sign In", new_user_session_path %> |
-				<%= link_to "Search", search_path%>
-			<% else %>
-				<%= link_to "My Account", user_path(current_user) %> |
-				<% if auth_provider.nil? %><%= link_to "Change Password", change_password_users_path %> |<% end%>				
-				<% if !auth_provider.nil? %><%= link_to "Friends", friends_path %> |<% end%>
-				<%= link_to "Search", search_path%> |
-				<%= link_to "Sign out", user_session_path(current_user), :method => :delete, :confirm => "Are you sure you want to signout?" %>
-			<% end %>		
-  		</div>
+  	<%= render :partial => "layouts/header", :locals => {:show_search => true} %>
+    <div id="container">    	
 		<% if current_user%>
 			<div style="float:right;border:1px solid #000000;padding:10px;background-color:#CDD;">					
 				<%=raw "You claimed <b>$#{totalclaimed.to_f}</b> -- till now"%>
