--- a/app/views/layouts/search.html.erb
+++ b/app/views/layouts/search.html.erb
@@ -7,11 +7,9 @@
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
-  <body>  		
-    <div id="container">
-    	<div id="header">
-	  		
-  		</div>
+  <body> 
+  	<%= render :partial => "layouts/header", :locals => {:show_search => false} %>
+    <div id="search_container">
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
