--- a/app/views/search/advance_search.html.erb
+++ b/app/views/search/advance_search.html.erb
@@ -82,7 +82,7 @@
 		<%= hidden_field_tag :search_type, (params[:search_type] || "advance")%>
 		<br>
 		<p>
-			<%= submit_tag "Search"%>
+			<%= submit_tag "search"%>
 		</p>
 	<% end%>
 </div>
