--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
 			<% if auth_provider.nil? %>
 				<%= link_to "Change Password", change_password_users_path %> |				
 			<% end%>				
-			<%= link_to "Friends", user_friends_friends_path%> |			
+			<%= link_to "Search Friends", user_friends_friends_path%> |			
 			<%= link_to "Sign out", user_session_path(current_user), :method => :delete, :confirm => "Are you sure you want to signout?" %>
 		<% end %>	
 	</div>	
