--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -65,6 +65,14 @@ a {
   margin-top: 10px;  
 }
 
+#footer {
+	margin: 0 auto;
+	width: 75%;
+	background-color: #FFF;	
+	padding: 10px 40px;
+	margin-top: 10px;
+}
+
 #flash_notice, #flash_error, #flash_alert, #flash_success {
   padding: 5px 8px;
   margin: 10px 0;
@@ -152,4 +160,17 @@ label.error {
 .table-header {
 	text-align:center;
 	font-weight: bold;
+}
+
+.social_buttons {
+	top: 200px;
+	left: 0px;
+}
+
+.paginate-wrapper {
+	margin-top: 10px;
+}
+
+.odd {
+   background: #cac;
 }
