--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body>  		
   	<%= render :partial => "layouts/header", :locals => {:show_search => true} %>
-    <div id="container">    	
+    <div id="container">
 		<% if current_user%>
 			<div style="float:right;border:1px solid #000000;padding:10px;background-color:#CDD;text-align:right;">					
 				<%=raw "You claimed <b>$#{totalclaimed.to_f}</b> -- till now"%><br>
@@ -24,5 +24,6 @@
       <%= content_tag :h1, yield(:title) if show_title? %>
       <%= yield %>
     </div>
+	<%= render :partial => "layouts/footer"%>	
   </body>
 </html>
