--- a/app/views/friends/user_friends.html.erb
+++ b/app/views/friends/user_friends.html.erb
@@ -47,10 +47,10 @@
 		</div>	
 	<% else%>
 		<div style="margin-top:5px;">
-			<table border='1px' cellpadding="3px" cellspacing="3px">
-				<tr>
-					<td class="table-header">Name</td>
-					<td class="table-header">View Results</td>
+			<table class="search-results" cellpadding="5px">
+				<tr class="table-header">
+					<td>Name</td>
+					<td>View Results</td>
 				</tr>
 				<% for search_friend in @search_friends %>
 				<tr>				
