--- a/app/views/layouts/_social_buttons.html.erb
+++ b/app/views/layouts/_social_buttons.html.erb
@@ -1,4 +1,4 @@
 <div class="social_buttons">
 	<%= link_to(image_tag("auth/twitter_64.png", :border => 0), "http://twitter.com/claimville", {:target => "blank", :title => "Follow on Twitter"})%>&nbsp;
-	<%= link_to(image_tag("auth/facebook_64.png", :border => 0), "http://facebook.com/", {:target => "blank", :title => "Follow on Facebook"})%>			
+	<%= link_to(image_tag("auth/facebook_64.png", :border => 0), "http://www.facebook.com/pages/ClaimVille/111548608930967", {:target => "blank", :title => "Follow on Facebook"})%>			
 </div>
