--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -137,11 +137,6 @@ a {
 	margin-top: 10px;	
 }
 
-.pagination {
-	padding: 2px 3px;
-	margin-top: 5px;
-}
-
 label.error {
 	margin-left: 5px;
 	font-size: 11px;
@@ -158,8 +153,9 @@ label.error {
 }
 
 .table-header {
-	text-align:center;
+	text-align: center;
 	font-weight: bold;
+	background-color: #F5CF17;
 }
 
 .social_buttons {
@@ -169,8 +165,27 @@ label.error {
 
 .paginate-wrapper {
 	margin-top: 10px;
+	text-align: center;
+	font-size: 16px;
+	border-top: 1px solid #000000;
+}
+
+.pagination {
+	padding: 2px 3px;
+	margin-top: 5px;
+}
+
+.pagination span.current {
+	padding: 0 3px;
+	font-size: 18px;
+	font-weight: bold;
 }
 
 .odd {
-   background: #cac;
+   background: #cca;
+}
+
+.search-results {
+	border: 0px;	
+	width: 100%;
 }
