removed search_friends html erb

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -67,7 +67,7 @@
 	</div>	
 <% elsif !params[:commit].blank?%>
 	<div class="no-results">
-		Their no results found. Please search with different keywords
+		No results found. Please search different name
 	</div>		
 <% end%>
 
