Change title text

--- a/app/views/claim_mains/show.html.erb
+++ b/app/views/claim_mains/show.html.erb
@@ -1,4 +1,4 @@
-<% title 'Details'%>
+<% title "Details of #{@claim_main.lastname} #{@claim_main.firstname} :: #{TITLE}"%>
 
 <style type="text/css">
 	.tb-bold {
