--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,4 +1,4 @@
-<% title 'Update your password'%> 
+<% title "Update your password :: #{TITLE}"%> 
 
 <p>Please enter the new password below and then press "Update Password".</p>
 
