--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,4 +1,4 @@
-<% title 'Reset Password'%>
+<% title "Reset Password :: #{TITLE}"%>
 
 <p>Please enter your email address below and then press "Reset Password".</p>
 
