--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,4 +1,4 @@
-<% title 'Change password'%> 
+<% title "Change password :: #{TITLE}"%> 
 
 <p>Please enter the new password and press "Update Password".</p>
 
