--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<% title 'Sign Up'%>
+<% title "Sign Up :: #{TITLE}"%>
 <p>
 	Already register? <%= link_to "Sign In", new_user_session_path%> | Not received activation mail <%= link_to "Click here", resend_activation_users_path%> 
 </p>
