--- a/app/views/users/resend_activation.html.erb
+++ b/app/views/users/resend_activation.html.erb
@@ -1,4 +1,4 @@
-<% title 'Resend Activation'%>
+<% title "Resend Activation :: #{TITLE}"%>
 
 <p>Enter your email address to get activation mail.</p>
 <%= form_tag resent_activation_users_path, :method => :post do%>
