--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,10 @@
 <div id="header">  		
 	<div id="header-logo">
 		<a href="/">ClaimVille</a>
+		<div style="font-size:11px;margin-left: 60px;">Search your missing money</div>
+		<div style="margin-top:5px;">
+			<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="http://www.facebook.com/pages/ClaimVille/111548608930967" send="true" width="450" show_faces="false" font="arial"></fb:like>	
+		</div>		
 	</div>
 	<div id="navigation-links">		
 		<% if !current_user %>
