--- a/app/views/layouts/search.html.erb
+++ b/app/views/layouts/search.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+	<meta name="keywords" content="Texas Unclaimed Property , Texas Money, My Money, Get My Money, where is my money, unclaimed property" />
+	<meta name="description" content="ClaimVille - Where you search and claim your missing unclaimed money or property in Texas" />
     <%= stylesheet_link_tag "/stylesheets/application.css" %>
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
