--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -33,7 +33,8 @@
 	<%= form_tag search_path, :method => :get do %>
 		<p>
 			<%= text_field_tag :search, (params[:search]||@search_keywords), :style => 'width:450px;' %>&nbsp;&nbsp;<%= submit_tag :search, :id => 'btn_search'%><br>
-			<span style="font-size:11px;"><%= link_to "Advanced search", advance_search_path %></span>
+			<span style="font-size:12px;"><%= link_to "Advanced search", advance_search_path %></span>
+			<span class="search-example">eg: Praneeth Patlola or Praneeth Patlola 78759</span>
   		</p>
 		<%= hidden_field_tag :search_type, (params[:search_type] || "normal")%>
 	<% end%>
