--- a/app/views/friends/user_friends.html.erb
+++ b/app/views/friends/user_friends.html.erb
@@ -70,5 +70,7 @@
 <script type="text/javascript">
 	$(function(){
 		$('#gmail_login_form').validate();
+		
+		$("tr:odd").addClass("odd");		
 	})
 </script>
