--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -79,5 +79,7 @@
 		$('#btn_search').click(function(e){
 			$('#search_type').val('normal')
 		});				
+		
+		$("tr:odd").addClass("odd");
 	})
 </script>
