--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -134,7 +134,7 @@ table {
 	margin-top: 20px;
 	font-size: 18px;
 	color: #000000;
-	background-color: #CC6E6E;
+	background-color: #DBE1E3;
 	text-align: center;
 }
 
