--- a/app/views/layouts/search.html.erb
+++ b/app/views/layouts/search.html.erb
@@ -8,6 +8,7 @@
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
+	<%= render :partial => "layouts/ga"%>
   </head>
   <body> 
   	<%= render :partial => "layouts/header", :locals => {:show_search => false} %>
