added footer links

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,12 @@
 <div id="footer">
+	<div id="footer-links">		
+		<span><a href="/">Home</a></span>
+		<span><a href="/about">About</a></span><br>
+		<div style="font-size:11px;text-align: center;">Copyright © 2011 by Unedollar. All Rights Reserved.</div>
+	</div>	
 	<div style="float:right;">
 		<%= render :partial => "layouts/social_buttons"%>
 	</div>
 	<div class="clear"></div>
+	
 </div>
